@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: syslog.c,v 1.49.2.2 2006/03/20 23:03:11 tony2001 Exp $ */
+/* $Id: syslog.c,v 1.49.2.3 2006/03/21 00:59:08 iliaa Exp $ */
 
 #include "php.h"
 
@@ -267,12 +267,7 @@ PHP_FUNCTION(syslog)
 		return;
 	}
 
-	/*
-	 * CAVEAT: if the message contains patterns such as "%s",
-	 * this will cause problems.
-	 */
-
-	php_syslog(priority, "%.500s", message);
+	php_syslog(priority, "%s", message);
 	RETURN_TRUE;
 }
 /* }}} */
